--- a/media-sound/networkaudiod-bin/files/networkaudiod.service
+++ b/media-sound/networkaudiod-bin/files/networkaudiod.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=Network Audio Adapter daemon
-Requires=network-online.target sound.target systemd-udev-settle.service
-After=network-online.target sound.target systemd-udev-settle.service
+#Requires=network-online.target sound.target systemd-udev-settle.service
+#After=network-online.target sound.target systemd-udev-settle.service
+Requires=sound.target
+After=sound.target
+
 
 [Service]
 Type=simple
